--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".EditEmergencyNumber"
+            android:label="@string/title_activity_edit_emergency_number"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".Home" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sangam.aditya.smarthelmet.Home" />
+        </activity>
     </application>
 
 </manifest>
