Adding the graph functionality
Vishnu worked on the achartengine library and got a proper graph
functionality, it fetches the latest values from the database and draws
a fully functional graph.

Signed-off-by: Aditya Prasad <adityaprasadiskool@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,6 +95,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sangam.aditya.smarthelmet.Home" />
         </activity>
+        <activity
+            android:name=".BargraphDisplay"
+            android:label="@string/title_activity_bargraph_display"
+            android:parentActivityName=".Home" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sangam.aditya.smarthelmet.Home" />
+        </activity>
+        <activity android:name="org.achartengine.GraphicalActivity" />
     </application>
 
 </manifest>
