--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,7 @@
         </activity>
         <activity
             android:name=".NameBloodGroup"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_name_blood_group"
             android:parentActivityName=".Registration" >
             <meta-data
