Added petrol availibility check for proposed journey
Improved the design. The color RED seems to be my mood now.

I got a toast the user if the petrol wont be enough. The intent to
google maps also wont be launched.

Signed-off-by: Aditya Prasad <adityaprasadiskool@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity
             android:name=".SetDestination"
             android:label="@string/title_activity_set_destination"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Home" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -83,6 +84,7 @@
         <activity
             android:name=".ShowProfile"
             android:label="@string/title_activity_show_profile"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Home" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
