--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -56,8 +56,8 @@
         <activity
             android:name=".SetDestination"
             android:label="@string/title_activity_set_destination"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".Home" >
+            android:parentActivityName=".Home"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sangam.aditya.smarthelmet.Home" />
@@ -74,9 +74,9 @@
         </activity>
         <activity
             android:name=".NameBloodGroup"
-            android:screenOrientation="portrait"
             android:label="@string/title_activity_name_blood_group"
-            android:parentActivityName=".Registration" >
+            android:parentActivityName=".Registration"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sangam.aditya.smarthelmet.Registration" />
@@ -84,8 +84,8 @@
         <activity
             android:name=".ShowProfile"
             android:label="@string/title_activity_show_profile"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".Home" >
+            android:parentActivityName=".Home"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sangam.aditya.smarthelmet.Home" />
@@ -107,6 +107,15 @@
                 android:value="com.sangam.aditya.smarthelmet.Home" />
         </activity>
         <activity android:name="org.achartengine.GraphicalActivity" />
+        <activity
+            android:name=".Details"
+            android:label="@string/title_activity_details"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".Home" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sangam.aditya.smarthelmet.Home" />
+        </activity>
     </application>
 
 </manifest>
